tests/parsing/smtlib/poly/errors/033_match_case_unclosed_1.psmt2
(set-logic UFDTLIA)
(declare-datatypes ((t 0)) (((A) (B) (C (foo int) (bar int)) (D (foobar int)))))
(define-fun f ((x t)) t (match x ((A B _))))
