tests/parsing/smtlib/poly/errors/033_match_case_unclosed_1.expected
File "tests/parsing/smtlib/poly/errors/033_match_case_unclosed_1.psmt2", line 3, character 39-40:
Error while parsing a match case, read the reserved word '_',
      but expected a closing parenthesis to close the match case.
